tests/baselines/reference/callConstructorsES6_08.errors.txt
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_08.ts(6,5): error TS9003: Callable classes are not currently supported.
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_08.ts(12,10): error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_08.ts(13,10): error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?


==== tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_08.ts (3 errors) ====
    
    const C = class C<T> {
        constructor(private x: T) {
        }
    
        call constructor<T>(x?: T) {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            return new C<T>(x);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS9003: Callable classes are not currently supported.
    };
    
    let c1 = new C(10);
    let c2 = C();
             ~~~
!!! error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?
    let c3 = C(100);
             ~~~~~~
!!! error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?